[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/images/bullets.png" type="Texture" id=2]
[ext_resource path="res://fonts/noir/Noir/NoirStd-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/black_hat.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BulletsImg" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -97.0
margin_right = 97.0
margin_bottom = -20.0
texture = ExtResource( 2 )

[node name="BulletsLbl" type="Label" parent="BulletsImg"]
margin_left = 105.0
margin_top = 8.0
margin_right = 83.0001
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "50"

[node name="EnemiesImg" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -97.0
margin_top = -97.0
margin_right = -20.0
margin_bottom = -20.0
texture = ExtResource( 4 )

[node name="EnemiesLbl" type="Label" parent="EnemiesImg"]
margin_left = -110.0
margin_top = 11.0
margin_right = 83.0001
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "50"

